--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -127,7 +127,7 @@
 
 /* páginas */
 .manual-pages {
-  display: flex;
+  display: center;
   gap: 24px;
   align-items: flex-end;
   text-decoration: none;
