--- a/about.html
+++ b/about.html
@@ -330,7 +330,7 @@ html lang="en">
 .assoc-role{
   font-size: .9rem;
   color: var(--muted2);
-  line-height: 1.5;
+  line-height: 1.5rem;
 }
 
 /* =======================
