--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@
             <ul class="dropdown-content">
               <li><a href="artistic-works.html">Send me a Color</a></li>
               <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+              <li><a href="editing.html">Research &amp; Film Editing</a></li>
             </ul>
           </li>
 
@@ -567,7 +568,6 @@
             <a href="analogue-film.html">Analogue Film Practice</a>
             <ul class="dropdown-content">
               <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
-              <li><a href="technical-documentation.html">Technical Documentation</a></li>
               <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
             </ul>
           </li>
