--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             <ul class="dropdown-content">
               <li><a href="artistic-works.html">Send me a Color</a></li>
               <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
-              <li><a href="editing.html">Research &amp; Film Editing</a></li>
+              <li><a href="editing.html">Film Editing</a></li>
             </ul>
           </li>
 
