--- a/about.html
+++ b/about.html
@@ -483,6 +483,7 @@ li a:hover .desc{
             <ul class="dropdown-content">
               <li><a href="artistic-works.html">Send Me a color</a></li>
               <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+                <li><a href="editing.html">Film Editing</a></li>
             </ul>
           </li>
 
