--- a/artistic-works.html
+++ b/artistic-works.html
@@ -288,8 +288,9 @@
           <li class="dropdown">
             <a href="projects.html">Projects</a>
             <ul class="dropdown-content">
-              <li><a href="artistic-works.html">Artistic Works</a></li>
+              <li><a href="artistic-works.html">Send me a Color</a></li>
               <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+                <li><a href="editing.html">Film Editing</a></li>
             </ul>
           </li>
 
