--- a/research-preservation.html
+++ b/research-preservation.html
@@ -268,8 +268,8 @@
 
 <body>
 
-<header>
-  <nav>
+ <header>
+      <nav>
         <!-- clica no nome para ir ao Home -->
         <a href="index.html" class="brand">MARIANA TORRES</a>
 
@@ -280,8 +280,9 @@
           <li class="dropdown">
             <a href="projects.html">Projects</a>
             <ul class="dropdown-content">
-              <li><a href="artistic-works.html">Artistic Works</a></li>
+              <li><a href="artistic-works.html">Send me a Color</a></li>
               <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+              <li><a href="editing.html">Film Editing</a></li>
             </ul>
           </li>
 
@@ -289,7 +290,6 @@
             <a href="analogue-film.html">Analogue Film Practice</a>
             <ul class="dropdown-content">
               <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
-              <li><a href="technical-documentation.html">Technical Documentation</a></li>
               <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
             </ul>
           </li>
@@ -297,7 +297,7 @@
 
         </ul>
       </nav>
-</header>
+    </header>
 
 <main>
 
